--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,20 @@
 <resources>
     <string name="app_name">FashionChaser</string>
     <string name="Login">Login</string>
+    <string name="select_clothing_style">Select Clothing Style</string>
+    <string-array name="clothing_style_names">
+        <item>Activewear</item>
+        <item>Blazers</item>
+        <item>Coats</item>
+        <item>Jackets</item>
+        <item>Hoodies</item>
+        <item>Sweaters</item>
+        <item>T-shirts</item>
+        <item>Jeans</item>
+        <item>Pants</item>
+        <item>Shorts</item>
+        <item>Suits</item>
+        <item>Swimwear</item>
+        <item>Polos</item>
+    </string-array>
 </resources>
