Color detection works with insert new clothes. Will automatically set the color spinner after taking the picture. Also the user can manually select the color if it's not accurate.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,6 +42,8 @@
         <item>Yellow</item>
         <item>Purple</item>
         <item>Brown</item>
+        <item>Gray</item>
+        <item>Orange</item>
     </string-array>
     <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_option_menu">OptionMenuActivity</string>
